# git-x

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SAFETY_TESTS.md  cobertura.xml
.claude/: settings.local.json
.github/workflows/: ci.yaml
docs/: architecture.md  command-internals.md  real-world-scenarios.md
src/: ARCHITECTURE.md  bisect.rs  clean_branches.rs  cli.rs  color_graph.rs  command.rs  common.rs  contributors.rs  fixup.rs  graph.rs  health.rs  info.rs  large_files.rs  lib.rs  main.rs  new_branch.rs  prune_branches.rs  rename_branch.rs  since.rs  stash_branch.rs  summary.rs  switch_recent.rs  sync.rs  technical_debt.rs  test_utils.rs  undo.rs  upstream.rs  what.rs
src/adapters/: cli_handlers.rs  formatters.rs  mod.rs
src/commands/: analysis.rs  branch.rs  commit.rs  completion.rs  mod.rs  repository.rs  stash.rs
src/core/: git.rs  interactive.rs  mod.rs  output.rs  safety.rs  traits.rs  validation.rs
src/domain/: branch_manager.rs  git_repository.rs  mod.rs
src/examples/: migration_example.rs  mod.rs
tests/: test_bisect.rs  test_branch_manager.rs  test_clean_branches.rs  test_cli.rs  test_cli_handlers.rs  test_color_graph.rs  test_contributors.rs  test_core_git.rs  test_e2e_happy_paths.rs  test_fixup.rs  test_formatters.rs  test_git_repository.rs  test_graph.rs  test_health.rs  test_health_additional.rs  test_health_run.rs  test_info.rs  test_interactive.rs  test_large_files.rs  test_large_files_run.rs  test_lib.rs  test_new_branch.rs  test_new_branch_additional.rs  test_output.rs  test_prune_branches.rs  test_rename_branch.rs  test_safety.rs  test_since.rs  test_stash_branch.rs  test_stash_branch_additional.rs  test_summary.rs  test_switch_recent.rs  test_sync.rs  test_sync_additional.rs  test_sync_run.rs  test_technical_debt.rs  test_traits.rs  test_undo.rs  test_upstream.rs  test_upstream_additional.rs  (+2 more)
tests/common/: mod.rs
