[package]
name = "git-x"
version = "0.3.0"
authors = ["Simon Egersand <s.egersand@gmail.com>"]
description = "CLI extensions for Git that simplify common workflows"
keywords = ["git", "cli", "tooling"]
categories = ["command-line-utilities", "development-tools"]

homepage = "https://github.com/simeg/git-x"
repository = "https://github.com/simeg/git-x"
documentation = "https://github.com/simeg/git-x/blob/master/README.md"
readme = "README.md"
license = "MIT"
edition = "2024"

[[bin]]
name = "git-x"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.20"
predicates = "3.1"
criterion = "0.5"
