[package]
name = "git-x"
version = "1.1.0"
authors = ["Simon Egersand <s.egersand@gmail.com>"]
description = "CLI extensions for Git that simplify common workflows"
keywords = ["git", "cli", "tooling"]
categories = ["command-line-utilities", "development-tools"]

homepage = "https://github.com/simeg/git-x"
repository = "https://github.com/simeg/git-x"
documentation = "https://github.com/simeg/git-x/blob/master/README.md"
readme = "README.md"
license = "MIT"
edition = "2024"

exclude = [
    "tests/*",
    "banner.png"
]

[[bin]]
name = "git-x"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "std", "help", "usage", "error-context"], default-features = false }
clap_complete = { version = "4.5", default-features = false }
console = { version = "0.16", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"], default-features = false }
fuzzy-matcher = { version = "0.3", default-features = false }
atty = { version = "0.2", default-features = false }
indicatif = { version = "0.18", default-features = false }
tokio = { version = "1.40", features = ["rt-multi-thread", "process", "macros"], default-features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }
rayon = { version = "1.8", default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.20"
predicates = "3.1"
serial_test = "3.0"

# Performance-optimized release profile
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
